--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,3 +1,44 @@
 # Core Libraries
+fastapi[all]==0.94.0
+pydantic<2
 git+https://github.com/runpod/runpod-python.git
 
+# Image Processing Libraries
+opencv-python-headless==4.8.1.78
+Pillow==9.5.0
+scikit-image==0.21.0
+
+# Machine Learning Libraries
+accelerate==0.21.0
+basicsr==1.4.2
+einops==0.4.1
+gradio==3.41.2
+kornia==0.6.7
+numpy==1.23.5
+omegaconf==2.2.3
+pytorch_lightning==1.9.4
+realesrgan==0.3.0
+safetensors==0.3.1
+timm==0.9.2
+torch
+torchdiffeq==0.2.3
+torchsde==0.2.5
+transformers==4.30.2
+
+# CLI and Development Utilities
+GitPython==3.1.37
+pyngrok==7.0.0
+
+# Web and Networking Libraries
+httpcore==0.15
+inflection==0.5.1
+jsonmerge==1.8.0
+
+# Miscellaneous Libraries
+blendmodes==2022
+clean-fid==0.1.35
+lark==1.1.2
+piexif==1.1.3
+psutil==5.9.5
+resize-right==0.0.2
+tomesd==0.1.3
