--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -26,7 +26,7 @@ torchsde==0.2.5
 transformers==4.30.2
 
 # CLI and Development Utilities
-GitPython==3.1.37
+GitPython==3.1.32
 pyngrok==7.0.0
 
 # Web and Networking Libraries
@@ -42,3 +42,19 @@ piexif==1.1.3
 psutil==5.9.5
 resize-right==0.0.2
 tomesd==0.1.3
+
+
+tensorflow-cpu
+onnx
+onnxruntime
+modelscope==1.9.3
+diffusers==0.18.2
+imageio>=2.29.0
+fsspec==2023.9.2
+invisible-watermark
+nvitop
+
+mediapipe
+svglib
+fvcore
+opencv-python>=4.8.0
