--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -43,6 +43,19 @@ psutil==5.9.5
 resize-right==0.0.2
 tomesd==0.1.3
 
+addict
+future
+lmdb
+pyyaml
+requests
+scipy
+tb-nightly
+torchvision
+tqdm
+yapf
+lpips
+gdown # supports downloading the large file from Google Drive
+
 
 tensorflow-cpu
 onnx
